feat(server-test): add graphspace in test